feat: fix corrections